--- a/styles.css
+++ b/styles.css
@@ -3,9 +3,13 @@ body {
 }
 
 h1 {
-    color: red;
+    color: blue;
+    font-family: verdana;
+    font-size: 300%;
 }
 
-p {
-    color:green;
+p  {
+    color: red;
+    font-family: courier;
+    font-size: 160%;
 }
